<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:paddingHorizontal="25dp">

        <TextView
            android:id="@+id/result_view"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/result"
            android:text="@string/result" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:columnCount="4"
        android:contentDescription="@string/calculator_desc"
        android:orientation="horizontal"
        android:rowCount="4">

        <Button
            android:id="@+id/print1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_1_btn"
            android:tag="number"
            android:text="@string/_1_btn" />

        <Button
            android:id="@+id/print2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_2_btn"
            android:tag="number"
            android:text="@string/_2_btn" />

        <Button
            android:id="@+id/print3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_3_btn"
            android:tag="number"
            android:text="@string/_3_btn" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/plus_btn"
            android:tag="operator"
            android:text="@string/plus_btn" />

        <Button
            android:id="@+id/print4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_4_btn"
            android:tag="number"
            android:text="@string/_4_btn" />

        <Button
            android:id="@+id/print5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_5_btn"
            android:tag="number"
            android:text="@string/_5_btn" />

        <Button
            android:id="@+id/print6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_6_btn"
            android:tag="number"
            android:text="@string/_6_btn" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/minus_btn"
            android:tag="operator"
            android:text="@string/minus_btn" />

        <Button
            android:id="@+id/pint7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_7_btn"
            android:tag="number"
            android:text="@string/_7_btn" />

        <Button
            android:id="@+id/pint8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_8_btn"
            android:tag="number"
            android:text="@string/_8_btn" />

        <Button
            android:id="@+id/pint9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_9_btn"
            android:tag="number"
            android:text="@string/_9_btn" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/multiply_btn"
            android:tag="operator"
            android:text="@string/multiply_btn" />

        <Button
            android:id="@+id/pint0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/_0_btn"
            android:tag="number"
            android:text="@string/_0_btn" />

        <Button
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/clear_btn"
            android:tag="clear"
            android:text="@string/clear_btn" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/equals_btn"
            android:tag="equals"
            android:text="@string/equals_btn" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/divide_btn"
            android:tag="operator"
            android:text="@string/divide_btn" />

    </GridLayout>

</LinearLayout>